fixed colour picker overflow

--- a/src/components/colorPicker.css
+++ b/src/components/colorPicker.css
@@ -6,3 +6,8 @@
   bottom: 3.2rem;
 
 }
+
+.colorPickerShifted {
+  bottom: unset;
+  top: 3.2rem;
+}
